2002-11-21 TADA Tadashi <sho@spc.gr.jp>
	* add plugin/recent-entry2.rb.
	* add comments into plugin files.
	* add README, COPYING.

2002-11-20 TADA Tadashi <sho@spc.gr.jp>
	* add arcgive_dropdown plugin.
	* archive.rb: list to reverse.

2002-11-18 TADA Tadashi <sho@spc.gr.jp>
	* Initial revision