@@ -1,3 +1,7 @@
+2002-11-22 TADA Tadashi <sho@spc.gr.jp>
+	* item length limit on whatsnew-list and recent-entry[2].
+	* tdiary.conf.sample: fix typo.
+
 2002-11-21 TADA Tadashi <sho@spc.gr.jp>
 	* add plugin/recent-entry2.rb.
 	* add comments into plugin files.
